# toml

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile
test/: CMakeLists.txt  invalid_array_tests.cpp  invalid_bool_tests.cpp  invalid_control_tests.cpp  invalid_datetime_tests.cpp  invalid_encoding_tests.cpp  invalid_float_tests.cpp  invalid_inline_table_tests.cpp  invalid_integer_tests.cpp  invalid_key_tests.cpp  invalid_string_tests.cpp  invalid_table_tests.cpp  invalid_tests.cpp  lexer.cpp  parser.cpp  test_common.hpp  valid_array_tests.cpp  valid_bool_tests.cpp  valid_comment_tests.cpp  valid_datetime_tests.cpp  valid_float_tests.cpp  valid_inline_table_tests.cpp  valid_integer_tests.cpp  valid_key_tests.cpp  valid_string_tests.cpp  valid_table_tests.cpp  valid_tests.cpp
test/invalid/array/: double-comma-1.cpp  double-comma-2.cpp  extending-table.cpp  missing-separator.cpp  no-close-2.cpp  no-close-table-2.cpp  no-close-table.cpp  no-close.cpp  tables-1.cpp  tables-2.cpp  text-after-array-entries.cpp  text-before-array-separator.cpp  text-in-array.cpp
test/invalid/bool/: almost-false-with-extra.cpp  almost-false.cpp  almost-true-with-extra.cpp  almost-true.cpp  just-f.cpp  just-t.cpp  mixed-case.cpp  starting-same-false.cpp  starting-same-true.cpp  wrong-case-false.cpp  wrong-case-true.cpp
test/invalid/control/: bare-cr.cpp  bare-formfeed.cpp  bare-null.cpp  bare-vertical-tab.cpp  comment-cr.cpp  comment-del.cpp  comment-lf.cpp  comment-null.cpp  comment-us.cpp  multi-del.cpp  multi-lf.cpp  multi-null.cpp  multi-us.cpp  rawmulti-del.cpp  rawmulti-lf.cpp  rawmulti-null.cpp  rawmulti-us.cpp  rawstring-del.cpp  rawstring-lf.cpp  rawstring-null.cpp  rawstring-us.cpp  string-bs.cpp  string-del.cpp  string-lf.cpp  string-null.cpp  string-us.cpp
test/invalid/datetime/: hour-over.cpp  mday-over.cpp  mday-under.cpp  minute-over.cpp  month-over.cpp  month-under.cpp  no-leads-with-milli.cpp  no-leads.cpp  no-secs.cpp  no-t.cpp  second-over.cpp  time-no-leads-2.cpp  time-no-leads.cpp  trailing-t.cpp
test/invalid/encoding/: bad-codepoint.cpp  bad-utf8-at-end.cpp  bad-utf8-in-comment.cpp  bad-utf8-in-multiline-literal.cpp  bad-utf8-in-multiline.cpp  bad-utf8-in-string-literal.cpp  bad-utf8-in-string.cpp  bom-not-at-start-1.cpp  bom-not-at-start-2.cpp  utf16-bom.cpp  utf16.cpp
test/invalid/float/: double-point-1.cpp  double-point-2.cpp  exp-double-e-1.cpp  exp-double-e-2.cpp  exp-double-us.cpp  exp-leading-us.cpp  exp-point-1.cpp  exp-point-2.cpp  exp-trailing-us.cpp  inf-capital.cpp  inf-incomplete-1.cpp  inf-incomplete-2.cpp  inf-incomplete-3.cpp  inf_underscore.cpp  leading-point-neg.cpp  leading-point-plus.cpp  leading-point.cpp  leading-us.cpp  leading-zero-neg.cpp  leading-zero-plus.cpp  leading-zero.cpp  nan-capital.cpp  nan-incomplete-1.cpp  nan-incomplete-2.cpp  nan-incomplete-3.cpp  nan_underscore.cpp  trailing-point-min.cpp  trailing-point-plus.cpp  trailing-point.cpp  trailing-us-exp-1.cpp  trailing-us-exp-2.cpp  trailing-us-exp.cpp  trailing-us.cpp  us-after-point.cpp  us-before-point.cpp
test/invalid/inline-table/: add.cpp  bad-key-syntax.cpp  dotted-key-conflict.cpp  double-comma.cpp  duplicate-key.cpp  empty.cpp  linebreak-1.cpp  linebreak-2.cpp  linebreak-3.cpp  linebreak-4.cpp  nested_key_conflict.cpp  no-comma.cpp  overwrite.cpp  trailing-comma.cpp
test/invalid/integer/: capital-bin.cpp  capital-hex.cpp  capital-oct.cpp  double-sign-nex.cpp  double-sign-plus.cpp  double-us.cpp  incomplete-bin.cpp  incomplete-hex.cpp  incomplete-oct.cpp  invalid-bin.cpp  invalid-hex.cpp  invalid-oct.cpp  leading-us-bin.cpp  leading-us-hex.cpp  leading-us-oct.cpp  leading-us.cpp  leading-zero-1.cpp  leading-zero-2.cpp  leading-zero-3.cpp  leading-zero-sign-1.cpp  leading-zero-sign-2.cpp  leading-zero-sign-3.cpp  negative-bin.cpp  negative-hex.cpp  negative-oct.cpp  positive-bin.cpp  positive-hex.cpp  positive-oct.cpp  text-after-integer.cpp  trailing-us-bin.cpp  trailing-us-hex.cpp  trailing-us-oct.cpp  trailing-us.cpp  us-after-bin.cpp  us-after-hex.cpp  us-after-oct.cpp
test/invalid/key/: after-array.cpp  after-table.cpp  after-value.cpp  bare-invalid-character.cpp  dotted-redefine-table.cpp  duplicate-keys.cpp  duplicate.cpp  empty.cpp  escape.cpp  hash.cpp  multiline.cpp  newline.cpp  no-eol.cpp  open-bracket.cpp  partial-quoted.cpp  quoted-unclosed-1.cpp  quoted-unclosed-2.cpp  single-open-bracket.cpp  space.cpp  special-character.cpp  start-bracket.cpp  start-dot.cpp  two-equals.cpp  two-equals2.cpp  two-equals3.cpp  without-value-1.cpp  without-value-2.cpp  without-value-3.cpp  without-value-4.cpp
test/invalid/spec/: inline-table-2-0.cpp  inline-table-3-0.cpp  key-value-pair-1.cpp  keys-2.cpp  string-4-0.cpp  string-7-0.cpp  table-9-0.cpp  table-9-1.cpp
test/invalid/string/: bad-byte-escape.cpp  bad-codepoint.cpp  bad-concat.cpp  bad-escape-1.cpp  bad-escape-2.cpp  bad-hex-esc-1.cpp  bad-hex-esc-2.cpp  bad-hex-esc-3.cpp  bad-hex-esc-4.cpp  bad-hex-esc-5.cpp  bad-multiline.cpp  bad-slash-escape.cpp  bad-uni-esc-1.cpp  bad-uni-esc-2.cpp  bad-uni-esc-3.cpp  bad-uni-esc-4.cpp  bad-uni-esc-5.cpp  basic-byte-escapes.cpp  basic-multiline-out-of-range-unicode-escape-1.cpp  basic-multiline-out-of-range-unicode-escape-2.cpp  basic-multiline-quotes.cpp  basic-multiline-unknown-escape.cpp  basic-out-of-range-unicode-escape-1.cpp  basic-out-of-range-unicode-escape-2.cpp  basic-unknown-escape.cpp  literal-multiline-quotes-1.cpp  literal-multiline-quotes-2.cpp  missing-quotes.cpp  multiline-bad-escape-1.cpp  multiline-bad-escape-2.cpp  multiline-bad-escape-3.cpp  multiline-escape-space.cpp  multiline-no-close-2.cpp  multiline-no-close.cpp  multiline-quotes-1.cpp  no-close.cpp  text-after-string.cpp  wrong-close.cpp
test/invalid/table/: append-to-array-with-dotted-keys.cpp  append-with-dotted-keys-1.cpp  append-with-dotted-keys-2.cpp  array-empty.cpp  array-implicit.cpp  (+20 more)
test/valid/: empty-file.cpp  example.cpp  implicit-and-explicit-after.cpp  implicit-and-explicit-before.cpp  implicit-groups.cpp  newline-crlf.cpp  newline-lf.cpp  spec-example-1-compact.cpp  spec-example-1.cpp
(+158 files in other folders)
