    add_executable(test_toml
        lexer.cpp
        parser.cpp
        valid/float/long.cpp
        valid/float/zero.cpp
        valid/float/underscore.cpp
        valid/float/float.cpp
        valid/float/inf-and-nan.cpp
        valid/float/exponent.cpp
        valid/datetime/local.cpp
        valid/datetime/timezone.cpp
        valid/datetime/milliseconds.cpp
        valid/datetime/local-date.cpp
        valid/datetime/local-time.cpp
        valid/datetime/datetime.cpp
        valid/array/hetergeneous.cpp
        valid/array/nospaces.cpp
        valid/array/mixed-int-string.cpp
        valid/array/mixed-int-float.cpp
        valid/array/bool.cpp
        valid/array/mixed-int-array.cpp
        valid/array/nested-inline-table.cpp
        valid/array/nested.cpp
        valid/array/table-array-string-backslash.cpp
        valid/array/string-with-comma.cpp
        valid/array/empty.cpp
        valid/array/nested-double.cpp
        valid/array/string-quote-comma-2.cpp
        valid/array/string-quote-comma.cpp
        valid/array/array.cpp
        valid/array/mixed-string-table.cpp
        valid/array/strings.cpp
        valid/empty-file.cpp
        valid/newline-crlf.cpp
        valid/bool/bool.cpp
        valid/implicit-and-explicit-before.cpp
        valid/example.cpp
        valid/key/alphanum.cpp
        valid/key/equals-nospace.cpp
        valid/key/case-sensitive.cpp
        valid/key/escapes.cpp
        valid/key/special-word.cpp
        valid/key/special-chars.cpp
        valid/key/empty.cpp
        valid/key/numeric-dotted.cpp
        valid/key/dotted.cpp
        valid/key/space.cpp
        valid/key/quoted-dots.cpp
        valid/key/numeric.cpp
        valid/integer/long.cpp
        valid/integer/zero.cpp
        valid/integer/integer.cpp
        valid/integer/underscore.cpp
        valid/integer/literals.cpp
        valid/implicit-and-explicit-after.cpp
        valid/inline-table/key-dotted.cpp
        valid/inline-table/bool.cpp
        valid/inline-table/multiline.cpp
        valid/inline-table/empty.cpp
        valid/inline-table/end-in-bool.cpp
        valid/inline-table/array.cpp
        valid/inline-table/nest.cpp
        valid/inline-table/inline-table.cpp
        valid/table/without-super.cpp
        valid/table/array-table-array.cpp
        valid/table/array-many.cpp
        valid/table/whitespace.cpp
        valid/table/sub-empty.cpp
        valid/table/array-implicit.cpp
        valid/table/keyword.cpp
        valid/table/empty.cpp
        valid/table/names.cpp
        valid/table/with-literal-string.cpp
        valid/table/with-pound.cpp
        valid/table/array-one.cpp
        valid/table/no-eol.cpp
        valid/table/array-nest.cpp
        valid/table/with-single-quotes.cpp
        valid/spec-example-1.cpp
        valid/comment/noeol.cpp
        valid/comment/tricky.cpp
        valid/comment/everywhere.cpp
        valid/comment/at-eof.cpp
        valid/comment/at-eof2.cpp
        valid/implicit-groups.cpp
        valid/spec-example-1-compact.cpp
        valid/string/simple.cpp
        valid/string/escape-tricky.cpp
        valid/string/multiline.cpp
        valid/string/escapes.cpp
        valid/string/raw-multiline.cpp
        valid/string/nl.cpp
        valid/string/escaped-escape.cpp
        valid/string/unicode-escape.cpp
        valid/string/raw.cpp
        valid/string/empty.cpp
        valid/string/multiline-escaped-crlf.cpp
        valid/string/with-pound.cpp
        valid/string/multiline-quotes.cpp
        valid/string/double-quote-escape.cpp
        valid/string/unicode-literal.cpp
        valid/newline-lf.cpp
        invalid/float/double-point-2.cpp
        invalid/float/inf-incomplete-1.cpp
        invalid/float/leading-point-plus.cpp
        invalid/float/leading-zero-neg.cpp
        invalid/float/us-after-point.cpp
        invalid/float/exp-point-1.cpp
        invalid/float/nan-incomplete-3.cpp
        invalid/float/leading-us.cpp
        invalid/float/trailing-point.cpp
        invalid/float/exp-double-us.cpp
        invalid/float/trailing-point-min.cpp
        invalid/float/inf-incomplete-3.cpp
        invalid/float/leading-zero-plus.cpp
        invalid/float/double-point-1.cpp
        invalid/float/inf-incomplete-2.cpp
        invalid/float/nan_underscore.cpp
        invalid/float/nan-incomplete-2.cpp
        invalid/float/nan-incomplete-1.cpp
        invalid/float/leading-point.cpp
        invalid/float/trailing-point-plus.cpp
        invalid/float/exp-trailing-us.cpp
        invalid/float/trailing-us.cpp
        invalid/float/exp-leading-us.cpp
        invalid/float/inf_underscore.cpp
        invalid/float/leading-zero.cpp
        invalid/float/leading-point-neg.cpp
        invalid/float/us-before-point.cpp
        invalid/float/exp-double-e-2.cpp
        invalid/float/trailing-us-exp.cpp
        invalid/float/exp-point-2.cpp
        invalid/float/exp-double-e-1.cpp
        invalid/datetime/time-no-leads-2.cpp
        invalid/datetime/time-no-leads.cpp
        invalid/datetime/minute-over.cpp
        invalid/datetime/trailing-t.cpp
        invalid/datetime/second-over.cpp
        invalid/datetime/no-leads.cpp
        invalid/datetime/no-leads-with-milli.cpp
        invalid/datetime/mday-under.cpp
        invalid/datetime/mday-over.cpp
        invalid/datetime/month-under.cpp
        invalid/datetime/no-t.cpp
        invalid/datetime/month-over.cpp
        invalid/datetime/hour-over.cpp
        invalid/datetime/no-secs.cpp
        invalid/control/rawstring-del.cpp
        invalid/control/bare-cr.cpp
        invalid/control/rawstring-lf.cpp
        invalid/control/bare-null.cpp
        invalid/control/multi-lf.cpp
        invalid/control/multi-del.cpp
        invalid/control/rawmulti-del.cpp
        invalid/control/comment-null.cpp
        invalid/control/string-us.cpp
        invalid/control/rawstring-null.cpp
        invalid/control/comment-del.cpp
        invalid/control/string-bs.cpp
        invalid/control/bare-formfeed.cpp
        invalid/control/comment-cr.cpp
        invalid/control/string-del.cpp
        invalid/control/bare-vertical-tab.cpp
        invalid/control/rawstring-us.cpp
        invalid/control/string-null.cpp
        invalid/control/comment-lf.cpp
        invalid/control/string-lf.cpp
        invalid/control/rawmulti-lf.cpp
        invalid/control/comment-us.cpp
        invalid/control/rawmulti-us.cpp
        invalid/control/multi-us.cpp
        invalid/control/rawmulti-null.cpp
        invalid/control/multi-null.cpp
        invalid/integer/leading-us-oct.cpp
        invalid/integer/capital-hex.cpp
        invalid/integer/invalid-bin.cpp
        invalid/integer/positive-hex.cpp
        invalid/integer/leading-us.cpp
        invalid/integer/leading-zero-sign-2.cpp
        invalid/integer/leading-zero-1.cpp
        invalid/integer/double-sign-plus.cpp
        invalid/integer/double-us.cpp
        invalid/integer/invalid-hex.cpp
        invalid/integer/leading-us-bin.cpp
        invalid/integer/negative-hex.cpp
        invalid/integer/text-after-integer.cpp
        invalid/integer/double-sign-nex.cpp
        invalid/integer/leading-zero-2.cpp
        invalid/integer/trailing-us.cpp
        invalid/integer/leading-zero-3.cpp
        invalid/integer/positive-bin.cpp
        invalid/integer/negative-bin.cpp
        invalid/integer/incomplete-oct.cpp
        invalid/integer/us-after-hex.cpp
        invalid/integer/trailing-us-bin.cpp
        invalid/integer/capital-bin.cpp
        invalid/integer/us-after-bin.cpp
        invalid/integer/trailing-us-hex.cpp
        invalid/integer/capital-oct.cpp
        invalid/integer/us-after-oct.cpp
        invalid/integer/negative-oct.cpp
        invalid/integer/invalid-oct.cpp
        invalid/integer/leading-zero-sign-3.cpp
        invalid/integer/incomplete-hex.cpp
        invalid/integer/trailing-us-oct.cpp
        invalid/integer/incomplete-bin.cpp
        invalid/integer/leading-zero-sign-1.cpp
        invalid/integer/leading-us-hex.cpp
        invalid/integer/positive-oct.cpp
        #invalid/encoding/bad-utf8-in-string-literal.cpp
        #invalid/encoding/bom-not-at-start-2.cpp
        #invalid/encoding/bom-not-at-start-1.cpp
        #invalid/encoding/bad-utf8-in-comment.cpp
        #invalid/encoding/utf16-bom.cpp
        #invalid/encoding/bad-utf8-in-multiline.cpp
        #invalid/encoding/bad-utf8-in-string.cpp
        #invalid/encoding/bad-utf8-in-multiline-literal.cpp
        invalid/encoding/utf16.cpp
        #invalid/encoding/bad-utf8-at-end.cpp
        #invalid/array/extending-table.cpp
        #invalid/array/missing-separator.cpp
        #invalid/array/double-comma-1.cpp
        #invalid/array/text-after-array-entries.cpp
        invalid/array/tables-1.cpp
        #invalid/array/double-comma-2.cpp
        #invalid/array/text-in-array.cpp
        #invalid/array/tables-2.cpp
        #invalid/array/no-close-table.cpp
        #invalid/array/text-before-array-separator.cpp
        #invalid/array/no-close-2.cpp
        #invalid/array/no-close-table-2.cpp
        #invalid/array/no-close.cpp
        #invalid/string/bad-uni-esc-1.cpp
        #invalid/string/basic-out-of-range-unicode-escape-1.cpp
        #invalid/string/basic-byte-escapes.cpp
        #invalid/string/literal-multiline-quotes-1.cpp
        invalid/string/multiline-no-close-2.cpp
        #invalid/string/literal-multiline-quotes-2.cpp
        #invalid/string/multiline-quotes-1.cpp
        #invalid/string/multiline-bad-escape-3.cpp
        #invalid/string/bad-concat.cpp
        invalid/string/wrong-close.cpp
        #invalid/string/bad-multiline.cpp
        #invalid/string/multiline-escape-space.cpp
        #invalid/string/bad-uni-esc-2.cpp
        #invalid/string/bad-uni-esc-4.cpp
        #invalid/string/bad-uni-esc-5.cpp
        #invalid/string/basic-multiline-out-of-range-unicode-escape-2.cpp
        #invalid/string/multiline-bad-escape-1.cpp
        #invalid/string/basic-out-of-range-unicode-escape-2.cpp
        #invalid/string/bad-escape-2.cpp
        #invalid/string/bad-byte-escape.cpp
        #invalid/string/bad-escape-1.cpp
        #invalid/string/bad-uni-esc-3.cpp
        #invalid/string/basic-unknown-escape.cpp
        invalid/string/multiline-no-close.cpp
        #invalid/string/basic-multiline-unknown-escape.cpp
        invalid/string/no-close.cpp
        #invalid/string/basic-multiline-out-of-range-unicode-escape-1.cpp
        #invalid/string/basic-multiline-quotes.cpp
        #invalid/string/text-after-string.cpp
        #invalid/string/multiline-bad-escape-2.cpp
        #invalid/string/bad-codepoint.cpp
        #invalid/string/missing-quotes.cpp
        #invalid/string/bad-slash-escape.cpp
        invalid/table/array-implicit.cpp
        invalid/table/with-pound.cpp
        invalid/table/redefine.cpp
        invalid/table/nested-brackets-open.cpp
        invalid/table/whitespace.cpp
        invalid/table/duplicate-key-dotted-table.cpp
        invalid/table/duplicate-table-array2.cpp
        invalid/table/empty.cpp
        invalid/table/quoted-no-close.cpp
        invalid/table/llbrace.cpp
        invalid/table/duplicate.cpp
        invalid/table/array-empty.cpp
        invalid/table/nested-brackets-close.cpp
        invalid/table/empty-implicit-table.cpp
        invalid/table/append-with-dotted-keys-1.cpp
        invalid/table/equals-sign.cpp
        invalid/table/duplicate-key-dotted-table2.cpp
        invalid/table/append-with-dotted-keys-2.cpp
        invalid/table/duplicate-table-array.cpp
        invalid/table/rrbrace.cpp
        invalid/table/array-missing-bracket.cpp
        invalid/table/text-after-table.cpp
        invalid/table/duplicate-key-table.cpp
        #invalid/inline-table/add.cpp
        #invalid/inline-table/linebreak-4.cpp
        invalid/inline-table/overwrite.cpp
        #invalid/inline-table/linebreak-1.cpp
        #invalid/inline-table/linebreak-3.cpp
        invalid/inline-table/duplicate-key.cpp
        #invalid/inline-table/double-comma.cpp
        #invalid/inline-table/empty.cpp
        #invalid/inline-table/linebreak-2.cpp
        #invalid/inline-table/trailing-comma.cpp
        #invalid/inline-table/no-comma.cpp
        #invalid/bool/starting-same-false.cpp
        #invalid/bool/just-f.cpp
        #invalid/bool/almost-true-with-extra.cpp
        #invalid/bool/just-t.cpp
        #invalid/bool/wrong-case-true.cpp
        #invalid/bool/almost-false.cpp
        #invalid/bool/almost-true.cpp
        #invalid/bool/mixed-case.cpp
        #invalid/bool/wrong-case-false.cpp
        #invalid/bool/starting-same-true.cpp
        #invalid/bool/almost-false-with-extra.cpp
        #invalid/key/dotted-redefine-table.cpp
        invalid/key/start-dot.cpp
        invalid/key/duplicate-keys.cpp
        #invalid/key/start-bracket.cpp
        #invalid/key/escape.cpp
        #invalid/key/two-equals3.cpp
        invalid/key/hash.cpp
        #invalid/key/single-open-bracket.cpp
        #invalid/key/two-equals.cpp
        #invalid/key/two-equals2.cpp
        invalid/key/empty.cpp
        #invalid/key/without-value-2.cpp
        invalid/key/duplicate.cpp
        #invalid/key/without-value-3.cpp
        #invalid/key/special-character.cpp
        #invalid/key/bare-invalid-character.cpp
        #invalid/key/after-table.cpp
        #invalid/key/without-value-1.cpp
        #invalid/key/after-value.cpp
        #invalid/key/no-eol.cpp
        #invalid/key/newline.cpp
        #invalid/key/quoted-unclosed-1.cpp
        #invalid/key/partial-quoted.cpp
        #invalid/key/open-bracket.cpp
        #invalid/key/quoted-unclosed-2.cpp
        #invalid/key/without-value-4.cpp
        #invalid/key/multiline.cpp
        #invalid/key/after-array.cpp
        #invalid/key/space.cpp
        )
    target_include_directories(test_toml PRIVATE ${PROJECT_SOURCE_DIR}/src)
    target_link_libraries(test_toml PRIVATE cxxflags toml gtest_main)

    add_custom_target(run_toml_tests COMMAND test_toml)
